k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: goslack
  labels:
    name: goslack
    app: goslack
